Added functionality for adding new words

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,22 @@
 <resources>
     <string name="app_name">Your Dictionary</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="look_up_words">Show Stored Words</string>
     <string name="word_list_fragment_label">Words That Start With {letter}</string>
     <string name="word_details_fragment_label">{word}</string>
+    <string name="submit">Add new word</string>
+    <string name="add_new_word">Add New Word</string>
+    <string name="remove_word">Remove word</string>
+
+    <!--fragment_add_new_word-->
+    <string name="new_word">New word</string>
+    <string name="transcription">Transcription</string>
+    <string name="translation">Translation</string>
+    <string name="example">Example</string>
+    <string name="meaning">Meaning</string>
+    <string name="button_save">Save</string>
+    <string name="button_cancel">Cancel</string>
+    <string name="word_error_message">Enter a new word</string>
+    <string name="new_word_added">Added new word</string>
 </resources>
