--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Your Dictionary</string>
+    <string name="app_name">Yocabulary</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="look_up_words">Show Stored Words</string>
@@ -16,16 +16,20 @@
     <string name="search_word_btn">Search translation</string>
 
     <!--fragment_add_new_word-->
-    <string name="new_word">New word</string>
+    <string name="new_word">Word</string>
     <string name="transcription">Transcription</string>
+    <string name="part_of_speech">Part of speech</string>
     <string name="translation">Translation</string>
     <string name="example">Example</string>
     <string name="meaning">Meaning</string>
-    <string name="button_save">Save</string>
+    <string name="save_word">Save word</string>
     <string name="button_cancel">Cancel</string>
     <string name="word_error_message">Enter a new word</string>
     <string name="new_word_added">Added new word</string>
     <string name="word_updated_success">Successfully updated</string>
+    <string name="search_in_dictionary">Search in<br> dictionary</br></string>
+    <string name="add_definition">Add Definition</string>
+    <string name="add_part_of_speech">Add Part of speech</string>
 
 
     <!--Vocabulary fragments -->
@@ -36,5 +40,8 @@
     <string name="search_words_hint">Search words</string>
     <string name="add_word_to_favorite">Add word %s to favorite</string>
     <string name="pronounce_word">Pronounce word</string>
+    <string name="delete_word">Delete word</string>
+    <string name="more_options_menu">More options</string>
+    <string name="synonyms_header">Synonyms</string>
 
 </resources>
