--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="search_in_dictionary">Search in<br> dictionary</br></string>
     <string name="add_meaning">Add Meaning</string>
     <string name="add_part_of_speech">Add Part of speech</string>
+    <string name="remove_part_of_speech">Remove Part of speech</string>
 
 
     <!--Vocabulary fragments -->
