--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,10 @@
     <string name="remove_meaning">Remove Meaning</string>
     <string name="loading_word">Loading</string>
 
+    <string name="no_such_word">No such word in dictionary</string>
+    <string name="check_internet_connection">Check your internet connection</string>
+    <string name="unknown_error">Unknown error. Please try again later</string>
+    <string name="got_it">Got it</string>
 
     <!--Vocabulary fragments -->
     <string name="vocabulary_tab">Vocabulary</string>
