--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,5 +56,9 @@
     <string name="delete_word">Delete word</string>
     <string name="more_options_menu">More options</string>
     <string name="synonyms_header">Synonyms</string>
+    
+    <string name="sort_by_word">Word</string>
+    <string name="sort_by_date">Date added</string>
+    <string name="sort_by_favorite">Favorite</string>
 
 </resources>
