--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,7 +44,9 @@
 
     <string name="yes">Yes</string>
     <string name="cancel">Cancel</string>
-
+    
+    <string name="search_in_dictionary_inline">Search this word in dictionary</string>
+    
     <!--Vocabulary fragments -->
     <string name="vocabulary_tab">Vocabulary</string>
     <string name="my_words_tab">My words</string>
@@ -57,7 +59,9 @@
     <string name="delete_word">Delete word</string>
     <string name="more_options_menu">More options</string>
     <string name="synonyms_header">Synonyms</string>
-    
+    <string name="add_translation">Add translation</string>
+    <string name="save_translation">Save translation</string>
+
     <string name="sort_by_word">Word</string>
     <string name="sort_by_date">Date added</string>
     <string name="sort_by_favorite">Favorite</string>
