--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,8 +42,10 @@
     <string name="no_such_word">No such word in dictionary</string>
     <string name="check_internet_connection">Check your internet connection</string>
     <string name="unknown_error">Unknown error. Please try again later</string>
+    <string name="word_already_exists">You already have this word in vocabulary</string>
     <string name="are_you_sure">Do you want to delete this word?</string>
     <string name="got_it">Got it</string>
+    <string name="replace">Replace</string>
 
     <string name="yes">Yes</string>
     <string name="cancel">Cancel</string>
