Refactoring ui package

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="changes_unsaved_desc">If you leave, the changes won\'t be saved</string>
     <string name="leave">Leave</string>
     <string name="stay">Stay</string>
+    <string name="error_add_or_update">Failed to add/update word. Try again</string>
 
     <string name="error">Error</string>
     <string name="no_such_word">No such word in dictionary</string>
