Added classes for practice functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,5 +96,6 @@
     <string name="match_meanings_with_words">Match meanings\nwith words</string>
     <string name="learn_spelling">Learn spelling</string>
     <string name="mixed_practice">Mixed practice</string>
+    <string name="practice_english">Practice English</string>
 
 </resources>
