--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,6 +97,10 @@
     <string name="learn_spelling">Learn spelling</string>
     <string name="mixed_practice">Mixed practice</string>
     <string name="practice_english">Practice English</string>
+    
+    <!-- PracticeStartPageFragment -->
+    <string name="meaning_task">Choose the correct word\nfor the given meaning</string>
+    <string name="start">Start</string>
 
     <!-- PracticeFragment -->
     <string name="next_question">Next</string>
